// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates > minimalProjectReadmeMd > per-target snapshots > mongo readme is stable 1`] = `
"# my-app

Generated by \`prisma-cli init\` with the Minimal template.

## First run

1. \`pnpm run db:up\` — start the local MongoDB replica set with \`mongodb-memory-server\`. Data persists in \`.mongo-data/\` across restarts.
2. \`pnpm run dev\` — runs \`src/index.ts\`, which writes one row and reads it back.

## Available scripts

- \`pnpm run dev\` — run the Prisma Next sample script

### Database and migrations

- \`pnpm run contract:emit\` — emit contract artifacts after contract changes
- \`pnpm run db:up\` — start the local MongoDB replica set with \`mongodb-memory-server\`. Data persists in \`.mongo-data/\` across restarts.
- \`pnpm run db:down\` — stop the local MongoDB process (data preserved)
- \`pnpm run db:reset\` — stop and wipe \`.mongo-data/\` for a clean slate
- \`pnpm run migration:plan\` — create a MongoDB migration plan
- \`pnpm run migrate\` — apply the planned MongoDB migration
- \`pnpm run db:seed\` — insert sample users manually

## Prisma Next

Prisma Next setup is scaffolded in:

- \`prisma/contract.ts\`
- \`prisma.config.ts\`
- \`prisma/db.ts\`
- \`src/lib/prisma.ts\`

For provider-specific Prisma Next reference docs, see \`prisma-next.md\`. Prisma Next skills live in the upstream \`skills/\` directory: https://github.com/prisma/prisma/tree/main/skills.

Node-based Prisma Next projects expect Node.js 24 LTS or newer.
"
`;

exports[`templates > minimalProjectReadmeMd > per-target snapshots > postgres readme is stable 1`] = `
"# my-app

Generated by \`prisma-cli init\` with the Minimal template.

## First run

1. \`pnpm run db:init\` — applies your contract to the database (creates tables, signs the marker).
2. \`pnpm run dev\` — runs \`src/index.ts\`, which writes one row and reads it back.

## Available scripts

- \`pnpm run dev\` — run the Prisma Next sample script

### Database and migrations

- \`pnpm run contract:emit\` — emit contract artifacts after contract changes
- \`pnpm run db:init\` — initialize database state manually
- \`pnpm run db:update\` — update database state manually
- \`pnpm run migration:plan\` — create a migration plan
- \`pnpm run migrate\` — apply a planned migration
- \`pnpm run db:seed\` — insert sample users manually (run after \`db:init\`)

## Prisma Next

Prisma Next setup is scaffolded in:

- \`prisma/contract.prisma\`
- \`prisma.config.ts\`
- \`prisma/db.ts\`
- \`src/lib/prisma.ts\`

For provider-specific Prisma Next reference docs, see \`prisma-next.md\`. Prisma Next skills live in the upstream \`skills/\` directory: https://github.com/prisma/prisma/tree/main/skills.

Node-based Prisma Next projects expect Node.js 24 LTS or newer.
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + psl > configFile is stable 1`] = `
"import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/mongo/config';

export default defineConfig({
  orm: ormConfig({
    contract: "./src/prisma/contract.prisma",
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + psl > dbFile is stable 1`] = `
"import mongo from '@internal/mongo/runtime';
import type { Contract } from './contract.d';
import contractJson from './contract.json' with { type: 'json' };

export const db = mongo<Contract>({
  contractJson,
  url: process.env['DATABASE_URL']!,
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + psl > quickReferenceMd is stable 1`] = `
"# Welcome to Prisma Next!

Prisma Next lets you query your database in simple, easy-to-read TypeScript. Define what your data looks like, and Prisma Next gives you a fully typed client — with autocomplete for every collection, field, and relation.

This project is set up for MongoDB. Prisma Next also supports other databases.

## Requirements

- **MongoDB 8.0 or newer.** Older servers are not supported. Run \`db.runCommand({ buildInfo: 1 })\` against your server to verify.
- The CLI never connects to your database without explicit consent. Pass \`--probe-db\` to \`prisma-cli init\` if you want \`init\` to verify the server version itself.

## Your data contract

Your data contract is the heart of your application. It lives at [\`src/prisma/contract.prisma\`](src/prisma/contract.prisma) and describes your models:

\`\`\`prisma
model User {
  id       ObjectId @id @map("_id")
  email    String   @unique
  username String?
  name     String?
  @@map("users")
}
\`\`\`

Every model you define in your contract can be queried from your app. Your editor will autocomplete the query methods and show you what type each field is:

\`\`\`typescript
import { db } from './src/prisma/db';

const user = await db.orm.users
  .where({ email: 'alice@example.com' })
  .first();

// Your editor will show the type of user as
// { _id: ObjectId; email: string; username: string | null; name: string | null; posts: Post[] } | null
\`\`\`

\`db\` connects to MongoDB lazily on the first query, so there is no manual \`connect(...)\` step in your application code. Call \`await db.close()\` if you need to release the underlying connection (typically only in tests or short-lived scripts). After \`close()\` the client is single-shot — any further query, \`connect()\`, or \`runtime()\` call rejects with \`"Mongo client is closed"\`. Construct a new \`mongo({...})\` if you need to use it again.

Your contract has two companion files in the same directory:

- **\`contract.json\`** — this tells your application what models exist, just like \`package-lock.json\` tells your package manager what dependencies your project has
- **\`contract.d.ts\`** — this powers autocomplete and type checking in your editor

Commit both files to git. When you change your contract, run \`pnpm prisma-cli contract emit\` to update them.

If you use a framework like Next.js or Vite, the Prisma Next plugin will do this for you automatically.

## Configuration

[\`prisma.config.ts\`](prisma.config.ts) tells the CLI where your contract lives and how to connect to your database. It loads environment variables from \`.env\` automatically:

\`\`\`typescript
import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/mongo/config';

export default defineConfig({
  orm: ormConfig({
    contract: './src/prisma/contract.prisma',
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
\`\`\`

Notice the \`DATABASE_URL\` above? It's defined in your [\`.env\`](./.env) file:

\`\`\`env
DATABASE_URL="mongodb://localhost:27017/mydb"
\`\`\`

You can customize how your environment variables are loaded by changing or removing the \`import 'dotenv/config'\` line.

## Quick reference

### Commands

\`\`\`bash
pnpm prisma-cli contract emit       # Update contract.json and contract.d.ts
pnpm prisma-cli db init             # Create collections in the database
pnpm prisma-cli migration status    # Show migration status
\`\`\`

### Files

| File | Purpose |
|---|---|
| [\`src/prisma/contract.prisma\`](src/prisma/contract.prisma) | Your data contract — define your models here |
| [\`prisma.config.ts\`](prisma.config.ts) | CLI configuration |
| [\`src/prisma/db.ts\`](src/prisma/db.ts) | Database client — \`import { db } from './src/prisma/db'\` |
| \`src/prisma/contract.json\` | Compiled contract (generated) |
| \`src/prisma/contract.d.ts\` | Contract types (generated) |

### Workflow

1. Edit [\`src/prisma/contract.prisma\`](src/prisma/contract.prisma) to add or change models.
2. Run \`pnpm prisma-cli contract emit\` to regenerate the contract.
3. Query your models — your IDE will autocomplete everything.

## Transactions and change streams (Mongo)

Multi-document transactions and change streams require MongoDB to run as a **replica set** — even single-node setups for development. A standalone \`mongod\` will reject \`withTransaction()\` at runtime. For local development you have a few options:

- **Docker Compose:** start \`mongo\` with \`--replSet rs0\` and run \`rs.initiate()\` once.
- **\`mongodb-memory-server\`:** use \`MongoMemoryReplSet\` instead of \`MongoMemoryServer\` in tests.
- **MongoDB Atlas:** every Atlas cluster is already a replica set.

The transaction API (\`db.transaction(...)\`) is on the roadmap and tracked under [TML-2313](https://linear.app/prisma-company/issue/TML-2313/mongo-dev-replica-set-story-is-missing-transactions-change-streams). Prisma Next's Mongo facade does not expose it yet — until that ticket lands, drive transactions yourself with a raw \`MongoClient\` using the escape hatch in the next section.

## Escape hatches

The ORM covers the common cases. For the rest, two escape hatches are designed in:

- **Typed raw aggregations — \`db.query\`.** The facade exposes \`db.query\`, a typed builder for aggregation pipelines that runs through the same runtime + middleware + codec stack as \`db.orm\`. Reach for it when the ORM can't express a \`$lookup\`/\`$facet\`/\`$graphLookup\`/window-function pipeline.
- **Direct \`mongodb\` driver control — \`mongoClient\` binding.** Construct your own \`MongoClient\` and pass it to \`mongo({ mongoClient, dbName, contractJson })\`. Your code keeps the \`MongoClient\` reference and uses it directly (transactions, change streams, sessions, anything Prisma Next doesn't surface yet); the same \`db\` object continues to give you the typed ORM.

\`db.runtime()\` is **not** the escape hatch — it returns the internal executor (\`MongoRuntime\`), not a \`mongodb\` \`MongoClient\` or \`Db\`. Use \`db.query\` for raw aggregations and the \`mongoClient\` binding for direct driver control.

## Monorepo notes (pnpm workspaces)

If this project lives inside a pnpm workspace, a few things are worth knowing:

- **Catalogs.** When the workspace's \`pnpm-workspace.yaml\` defines a \`catalogs\` entry for \`@prisma/cli\` or \`@internal/mongo\`, pnpm uses the catalog version everywhere — \`init\` does too. If you wanted the published \`latest\` instead, update or remove the catalog entry, then re-run \`pnpm install\`.
- **\`pnpm dlx\`.** \`pnpm dlx @prisma/cli@next init …\` works in any directory. Inside a workspace, pnpm still resolves dependencies through the workspace's catalog/overrides rather than the registry; expect the installed Prisma Next packages to reflect the workspace's catalog rather than \`latest\`.
- **\`pnpm\` → \`npm\` fallback.** If \`pnpm\` ever fails to install Prisma Next with a \`workspace:*\` or \`catalog:\` resolution error (a leak in a published artefact), \`init\` falls back to \`npm install\` and surfaces a warning. Once the offending package republishes a clean version you can switch back with \`pnpm install\`.
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + psl > starterSchema is stable 1`] = `
"// use prisma-next

model User {
  id       ObjectId @id @map("_id")
  email    String   @unique
  username String?
  name     String?
  posts    Post[]
  @@map("users")
}

model Post {
  id       ObjectId @id @map("_id")
  title    String
  content  String?
  author   User     @relation(fields: [authorId], references: [id])
  authorId ObjectId
  @@map("posts")
}
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + typescript > configFile is stable 1`] = `
"import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/mongo/config';

export default defineConfig({
  orm: ormConfig({
    contract: "./src/prisma/contract.ts",
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + typescript > dbFile is stable 1`] = `
"import mongo from '@internal/mongo/runtime';
import type { Contract } from './contract.d';
import contractJson from './contract.json' with { type: 'json' };

export const db = mongo<Contract>({
  contractJson,
  url: process.env['DATABASE_URL']!,
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + typescript > quickReferenceMd is stable 1`] = `
"# Welcome to Prisma Next!

Prisma Next lets you query your database in simple, easy-to-read TypeScript. Define what your data looks like, and Prisma Next gives you a fully typed client — with autocomplete for every collection, field, and relation.

This project is set up for MongoDB. Prisma Next also supports other databases.

## Requirements

- **MongoDB 8.0 or newer.** Older servers are not supported. Run \`db.runCommand({ buildInfo: 1 })\` against your server to verify.
- The CLI never connects to your database without explicit consent. Pass \`--probe-db\` to \`prisma-cli init\` if you want \`init\` to verify the server version itself.

## Your data contract

Your data contract is the heart of your application. It lives at [\`src/prisma/contract.ts\`](src/prisma/contract.ts) and describes your models:

\`\`\`typescript
import { defineContract } from '@internal/mongo/contract-builder';

export const contract = defineContract(
  {},
  ({ field, model }) => ({
    models: {
      User: model('User', {
        collection: 'users',
        fields: {
          _id: field.objectId(),
          email: field.string(),
          username: field.string().optional(),
          name: field.string().optional(),
        },
      }),
    },
  }),
);
\`\`\`

Every model you define in your contract can be queried from your app. Your editor will autocomplete the query methods and show you what type each field is:

\`\`\`typescript
import { db } from './src/prisma/db';

const user = await db.orm.users
  .where({ email: 'alice@example.com' })
  .first();

// Your editor will show the type of user as
// { _id: ObjectId; email: string; username: string | null; name: string | null; posts: Post[] } | null
\`\`\`

\`db\` connects to MongoDB lazily on the first query, so there is no manual \`connect(...)\` step in your application code. Call \`await db.close()\` if you need to release the underlying connection (typically only in tests or short-lived scripts). After \`close()\` the client is single-shot — any further query, \`connect()\`, or \`runtime()\` call rejects with \`"Mongo client is closed"\`. Construct a new \`mongo({...})\` if you need to use it again.

Your contract has two companion files in the same directory:

- **\`contract.json\`** — this tells your application what models exist, just like \`package-lock.json\` tells your package manager what dependencies your project has
- **\`contract.d.ts\`** — this powers autocomplete and type checking in your editor

Commit both files to git. When you change your contract, run \`pnpm prisma-cli contract emit\` to update them.

If you use a framework like Next.js or Vite, the Prisma Next plugin will do this for you automatically.

## Configuration

[\`prisma.config.ts\`](prisma.config.ts) tells the CLI where your contract lives and how to connect to your database. It loads environment variables from \`.env\` automatically:

\`\`\`typescript
import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/mongo/config';

export default defineConfig({
  orm: ormConfig({
    contract: './src/prisma/contract.ts',
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
\`\`\`

Notice the \`DATABASE_URL\` above? It's defined in your [\`.env\`](./.env) file:

\`\`\`env
DATABASE_URL="mongodb://localhost:27017/mydb"
\`\`\`

You can customize how your environment variables are loaded by changing or removing the \`import 'dotenv/config'\` line.

## Quick reference

### Commands

\`\`\`bash
pnpm prisma-cli contract emit       # Update contract.json and contract.d.ts
pnpm prisma-cli db init             # Create collections in the database
pnpm prisma-cli migration status    # Show migration status
\`\`\`

### Files

| File | Purpose |
|---|---|
| [\`src/prisma/contract.ts\`](src/prisma/contract.ts) | Your data contract — define your models here |
| [\`prisma.config.ts\`](prisma.config.ts) | CLI configuration |
| [\`src/prisma/db.ts\`](src/prisma/db.ts) | Database client — \`import { db } from './src/prisma/db'\` |
| \`src/prisma/contract.json\` | Compiled contract (generated) |
| \`src/prisma/contract.d.ts\` | Contract types (generated) |

### Workflow

1. Edit [\`src/prisma/contract.ts\`](src/prisma/contract.ts) to add or change models.
2. Run \`pnpm prisma-cli contract emit\` to regenerate the contract.
3. Query your models — your IDE will autocomplete everything.

## Transactions and change streams (Mongo)

Multi-document transactions and change streams require MongoDB to run as a **replica set** — even single-node setups for development. A standalone \`mongod\` will reject \`withTransaction()\` at runtime. For local development you have a few options:

- **Docker Compose:** start \`mongo\` with \`--replSet rs0\` and run \`rs.initiate()\` once.
- **\`mongodb-memory-server\`:** use \`MongoMemoryReplSet\` instead of \`MongoMemoryServer\` in tests.
- **MongoDB Atlas:** every Atlas cluster is already a replica set.

The transaction API (\`db.transaction(...)\`) is on the roadmap and tracked under [TML-2313](https://linear.app/prisma-company/issue/TML-2313/mongo-dev-replica-set-story-is-missing-transactions-change-streams). Prisma Next's Mongo facade does not expose it yet — until that ticket lands, drive transactions yourself with a raw \`MongoClient\` using the escape hatch in the next section.

## Escape hatches

The ORM covers the common cases. For the rest, two escape hatches are designed in:

- **Typed raw aggregations — \`db.query\`.** The facade exposes \`db.query\`, a typed builder for aggregation pipelines that runs through the same runtime + middleware + codec stack as \`db.orm\`. Reach for it when the ORM can't express a \`$lookup\`/\`$facet\`/\`$graphLookup\`/window-function pipeline.
- **Direct \`mongodb\` driver control — \`mongoClient\` binding.** Construct your own \`MongoClient\` and pass it to \`mongo({ mongoClient, dbName, contractJson })\`. Your code keeps the \`MongoClient\` reference and uses it directly (transactions, change streams, sessions, anything Prisma Next doesn't surface yet); the same \`db\` object continues to give you the typed ORM.

\`db.runtime()\` is **not** the escape hatch — it returns the internal executor (\`MongoRuntime\`), not a \`mongodb\` \`MongoClient\` or \`Db\`. Use \`db.query\` for raw aggregations and the \`mongoClient\` binding for direct driver control.

## Monorepo notes (pnpm workspaces)

If this project lives inside a pnpm workspace, a few things are worth knowing:

- **Catalogs.** When the workspace's \`pnpm-workspace.yaml\` defines a \`catalogs\` entry for \`@prisma/cli\` or \`@internal/mongo\`, pnpm uses the catalog version everywhere — \`init\` does too. If you wanted the published \`latest\` instead, update or remove the catalog entry, then re-run \`pnpm install\`.
- **\`pnpm dlx\`.** \`pnpm dlx @prisma/cli@next init …\` works in any directory. Inside a workspace, pnpm still resolves dependencies through the workspace's catalog/overrides rather than the registry; expect the installed Prisma Next packages to reflect the workspace's catalog rather than \`latest\`.
- **\`pnpm\` → \`npm\` fallback.** If \`pnpm\` ever fails to install Prisma Next with a \`workspace:*\` or \`catalog:\` resolution error (a leak in a published artefact), \`init\` falls back to \`npm install\` and surfaces a warning. Once the offending package republishes a clean version you can switch back with \`pnpm install\`.
"
`;

exports[`templates > per-cell snapshots (FR5.4) > mongo + typescript > starterSchema is stable 1`] = `
"import { defineContract } from '@internal/mongo/contract-builder';

export const contract = defineContract(
  {},
  ({ field, model, rel }) => ({
    models: {
      User: model('User', {
        collection: 'users',
        fields: {
          _id: field.objectId(),
          email: field.string(),
          username: field.string().optional(),
          name: field.string().optional(),
        },
        relations: {
          posts: rel.hasMany('Post', { from: '_id', to: 'authorId' }),
        },
      }),

      Post: model('Post', {
        collection: 'posts',
        fields: {
          _id: field.objectId(),
          title: field.string(),
          content: field.string().optional(),
          authorId: field.objectId(),
        },
        relations: {
          author: rel.belongsTo('User', { from: 'authorId', to: '_id' }),
        },
      }),
    },
  }),
);
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + psl > configFile is stable 1`] = `
"import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/postgres/config';

export default defineConfig({
  orm: ormConfig({
    contract: "./src/prisma/contract.prisma",
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + psl > dbFile is stable 1`] = `
"import postgres from '@internal/postgres/runtime';
import type { Contract } from './contract.d';
import contractJson from './contract.json' with { type: 'json' };

export const db = postgres<Contract>({
  contractJson,
  url: process.env['DATABASE_URL']!,
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + psl > quickReferenceMd is stable 1`] = `
"# Welcome to Prisma Next!

Prisma Next lets you query your database in simple, easy-to-read TypeScript. Define what your data looks like, and Prisma Next gives you a fully typed client — with autocomplete for every table, column, and relation.

This project is set up for PostgreSQL. Prisma Next also supports other databases.

## Requirements

- **PostgreSQL 17 or newer.** Older servers are not supported. Run \`SELECT version()\` against your server to verify.
- The CLI never connects to your database without explicit consent. Pass \`--probe-db\` to \`prisma-cli init\` if you want \`init\` to verify the server version itself.

## Your data contract

Your data contract is the heart of your application. It lives at [\`src/prisma/contract.prisma\`](src/prisma/contract.prisma) and describes your models:

\`\`\`prisma
model User {
  id       Int     @id @default(autoincrement())
  email    String  @unique
  username String?
  name     String?
}
\`\`\`

Every model you define in your contract can be queried from your app. Your editor will autocomplete the query methods and show you what type each model field is:

\`\`\`typescript
import { db } from './src/prisma/db';

const user = await db.orm.User
  .where({ email: 'alice@example.com' })
  .first();

// Your editor will show the type of user as
// { id: number; email: string; username: string | null; name: string | null; createdAt: Date; posts: Post[] } | null
\`\`\`

Your contract has two companion files in the same directory:

- **\`contract.json\`** — this tells your application what models exist, just like \`package-lock.json\` tells your package manager what dependencies your project has
- **\`contract.d.ts\`** — this powers autocomplete and type checking in your editor

Commit both files to git. When you change your contract, run \`pnpm prisma-cli contract emit\` to update them.

If you use a framework like Next.js or Vite, the Prisma Next plugin will do this for you automatically.

## Configuration

[\`prisma.config.ts\`](prisma.config.ts) tells the CLI where your contract lives and how to connect to your database. It loads environment variables from \`.env\` automatically:

\`\`\`typescript
import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/postgres/config';

export default defineConfig({
  orm: ormConfig({
    contract: './src/prisma/contract.prisma',
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
\`\`\`

Notice the \`DATABASE_URL\` above? It's defined in your [\`.env\`](./.env) file:

\`\`\`env
DATABASE_URL="postgresql://user:password@localhost:5432/mydb"
\`\`\`

You can customize how your environment variables are loaded by changing or removing the \`import 'dotenv/config'\` line.

## Quick reference

### Commands

\`\`\`bash
pnpm prisma-cli contract emit       # Update contract.json and contract.d.ts
pnpm prisma-cli db init             # Create tables in the database
pnpm prisma-cli migration status    # Show migration status
\`\`\`

### Files

| File | Purpose |
|---|---|
| [\`src/prisma/contract.prisma\`](src/prisma/contract.prisma) | Your data contract — define your models here |
| [\`prisma.config.ts\`](prisma.config.ts) | CLI configuration |
| [\`src/prisma/db.ts\`](src/prisma/db.ts) | Database client — \`import { db } from './src/prisma/db'\` |
| \`src/prisma/contract.json\` | Compiled contract (generated) |
| \`src/prisma/contract.d.ts\` | Contract types (generated) |

### Workflow

1. Edit [\`src/prisma/contract.prisma\`](src/prisma/contract.prisma) to add or change models.
2. Run \`pnpm prisma-cli contract emit\` to regenerate the contract.
3. Query your models — your IDE will autocomplete everything.

## Monorepo notes (pnpm workspaces)

If this project lives inside a pnpm workspace, a few things are worth knowing:

- **Catalogs.** When the workspace's \`pnpm-workspace.yaml\` defines a \`catalogs\` entry for \`@prisma/cli\` or \`@internal/postgres\`, pnpm uses the catalog version everywhere — \`init\` does too. If you wanted the published \`latest\` instead, update or remove the catalog entry, then re-run \`pnpm install\`.
- **\`pnpm dlx\`.** \`pnpm dlx @prisma/cli@next init …\` works in any directory. Inside a workspace, pnpm still resolves dependencies through the workspace's catalog/overrides rather than the registry; expect the installed Prisma Next packages to reflect the workspace's catalog rather than \`latest\`.
- **\`pnpm\` → \`npm\` fallback.** If \`pnpm\` ever fails to install Prisma Next with a \`workspace:*\` or \`catalog:\` resolution error (a leak in a published artefact), \`init\` falls back to \`npm install\` and surfaces a warning. Once the offending package republishes a clean version you can switch back with \`pnpm install\`.
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + psl > starterSchema is stable 1`] = `
"// use prisma-next

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  username  String?
  name      String?
  posts     Post[]
  createdAt DateTime @default(now())
  updatedAt temporal.updatedAt()
}

model Post {
  id        Int      @id @default(autoincrement())
  title     String
  content   String?
  author    User     @relation(fields: [authorId], references: [id])
  authorId  Int
  createdAt DateTime @default(now())
  updatedAt temporal.updatedAt()
}
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + typescript > configFile is stable 1`] = `
"import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/postgres/config';

export default defineConfig({
  orm: ormConfig({
    contract: "./src/prisma/contract.ts",
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + typescript > dbFile is stable 1`] = `
"import postgres from '@internal/postgres/runtime';
import type { Contract } from './contract.d';
import contractJson from './contract.json' with { type: 'json' };

export const db = postgres<Contract>({
  contractJson,
  url: process.env['DATABASE_URL']!,
});
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + typescript > quickReferenceMd is stable 1`] = `
"# Welcome to Prisma Next!

Prisma Next lets you query your database in simple, easy-to-read TypeScript. Define what your data looks like, and Prisma Next gives you a fully typed client — with autocomplete for every table, column, and relation.

This project is set up for PostgreSQL. Prisma Next also supports other databases.

## Requirements

- **PostgreSQL 17 or newer.** Older servers are not supported. Run \`SELECT version()\` against your server to verify.
- The CLI never connects to your database without explicit consent. Pass \`--probe-db\` to \`prisma-cli init\` if you want \`init\` to verify the server version itself.

## Your data contract

Your data contract is the heart of your application. It lives at [\`src/prisma/contract.ts\`](src/prisma/contract.ts) and describes your models:

\`\`\`typescript
import { defineContract } from '@internal/postgres/contract-builder';

export const contract = defineContract(
  {},
  ({ field, model }) => ({
    models: {
      User: model('User', {
        fields: {
          id: field.id.uuidv7String(),
          email: field.text().unique(),
          username: field.text().optional(),
          name: field.text().optional(),
        },
      }),
    },
  }),
);
\`\`\`

Every model you define in your contract can be queried from your app. Your editor will autocomplete the query methods and show you what type each model field is:

\`\`\`typescript
import { db } from './src/prisma/db';

const user = await db.orm.User
  .where({ email: 'alice@example.com' })
  .first();

// Your editor will show the type of user as
// { id: number; email: string; username: string | null; name: string | null; createdAt: Date; posts: Post[] } | null
\`\`\`

Your contract has two companion files in the same directory:

- **\`contract.json\`** — this tells your application what models exist, just like \`package-lock.json\` tells your package manager what dependencies your project has
- **\`contract.d.ts\`** — this powers autocomplete and type checking in your editor

Commit both files to git. When you change your contract, run \`pnpm prisma-cli contract emit\` to update them.

If you use a framework like Next.js or Vite, the Prisma Next plugin will do this for you automatically.

## Configuration

[\`prisma.config.ts\`](prisma.config.ts) tells the CLI where your contract lives and how to connect to your database. It loads environment variables from \`.env\` automatically:

\`\`\`typescript
import 'dotenv/config';
import { defineConfig } from '@prisma/cli-engine';
import { defineConfig as ormConfig } from '@internal/postgres/config';

export default defineConfig({
  orm: ormConfig({
    contract: './src/prisma/contract.ts',
    db: {
      connection: process.env['DATABASE_URL']!,
    },
  }),
});
\`\`\`

Notice the \`DATABASE_URL\` above? It's defined in your [\`.env\`](./.env) file:

\`\`\`env
DATABASE_URL="postgresql://user:password@localhost:5432/mydb"
\`\`\`

You can customize how your environment variables are loaded by changing or removing the \`import 'dotenv/config'\` line.

## Quick reference

### Commands

\`\`\`bash
pnpm prisma-cli contract emit       # Update contract.json and contract.d.ts
pnpm prisma-cli db init             # Create tables in the database
pnpm prisma-cli migration status    # Show migration status
\`\`\`

### Files

| File | Purpose |
|---|---|
| [\`src/prisma/contract.ts\`](src/prisma/contract.ts) | Your data contract — define your models here |
| [\`prisma.config.ts\`](prisma.config.ts) | CLI configuration |
| [\`src/prisma/db.ts\`](src/prisma/db.ts) | Database client — \`import { db } from './src/prisma/db'\` |
| \`src/prisma/contract.json\` | Compiled contract (generated) |
| \`src/prisma/contract.d.ts\` | Contract types (generated) |

### Workflow

1. Edit [\`src/prisma/contract.ts\`](src/prisma/contract.ts) to add or change models.
2. Run \`pnpm prisma-cli contract emit\` to regenerate the contract.
3. Query your models — your IDE will autocomplete everything.

## Monorepo notes (pnpm workspaces)

If this project lives inside a pnpm workspace, a few things are worth knowing:

- **Catalogs.** When the workspace's \`pnpm-workspace.yaml\` defines a \`catalogs\` entry for \`@prisma/cli\` or \`@internal/postgres\`, pnpm uses the catalog version everywhere — \`init\` does too. If you wanted the published \`latest\` instead, update or remove the catalog entry, then re-run \`pnpm install\`.
- **\`pnpm dlx\`.** \`pnpm dlx @prisma/cli@next init …\` works in any directory. Inside a workspace, pnpm still resolves dependencies through the workspace's catalog/overrides rather than the registry; expect the installed Prisma Next packages to reflect the workspace's catalog rather than \`latest\`.
- **\`pnpm\` → \`npm\` fallback.** If \`pnpm\` ever fails to install Prisma Next with a \`workspace:*\` or \`catalog:\` resolution error (a leak in a published artefact), \`init\` falls back to \`npm install\` and surfaces a warning. Once the offending package republishes a clean version you can switch back with \`pnpm install\`.
"
`;

exports[`templates > per-cell snapshots (FR5.4) > postgres + typescript > starterSchema is stable 1`] = `
"import { defineContract } from '@internal/postgres/contract-builder';

export const contract = defineContract(
  {},
  ({ field, model, rel }) => ({
    models: {
      User: model('User', {
        fields: {
          id: field.id.uuidv7String(),
          email: field.text().unique(),
          username: field.text().optional(),
          name: field.text().optional(),
          createdAt: field.temporal.createdAt(),
          updatedAt: field.temporal.updatedAt(),
        },
        relations: {
          posts: rel.hasMany('Post', { by: 'authorId' }),
        },
      }),

      Post: model('Post', {
        fields: {
          id: field.id.uuidv7String(),
          title: field.text(),
          content: field.text().optional(),
          authorId: field.uuidString(),
          createdAt: field.temporal.createdAt(),
          updatedAt: field.temporal.updatedAt(),
        },
        relations: {
          author: rel.belongsTo('User', { from: 'authorId', to: 'id' }),
        },
      }),
    },
  }),
);
"
`;
